Fix scrollbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -132,3 +132,7 @@ body,
 nextjs-portal {
   display: none !important;
 }
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Edge (mới) */
+}
